app/styles/views/_footer.scss
.footer {
    position: absolute;
    bottom: 0;

    width: 100%;

    margin: 0;
    padding: 0;

    height: 30px;
    line-height: 30px;

    color: $gray-light;
    background-color: $gray-dark;
    text-align: center;

    ul {
        margin: 0;
    }

    .list-inline > li:first-child {
        padding-left: 10px;
    }

    li {
        padding: 0 10px;
    }

    a {
        color: $gray-light;

        &:hover, &:active, &:visited, &:focus {
            text-decoration: none;
        }
    }
}

